<resources>
    <string name="app_name">بخشنامه</string>
    <string name="sheet_title">دریافت بخشنامه</string>
    <string name="about">درباره ما</string>
    <string name="settings">تنظیمات</string>
    <string name="circulars">بخشنامه ها</string>
    <string name="stored">دانلود شده ها</string>
    <string name="ministry">امور اداری وزارت</string>
    <string name="select_region">لطفا منطقه خود را انتخاب کنید</string>
    <string name="downloaded_Message">دانلود شده،اینجا لمس کنید</string>
    <string name="NegativeButton">بیخیال</string>
    <string name="GoUp">قبلی</string>
    <string name="changeLogTitle">تاریخچه نسخه ها</string>
    <string name="telegram_user">tg://resolve?domain=KlausM72</string>
    <string name="email">mahdidvb72@gmail.com</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="search_hint">جستجو...</string>
    <string name="downloading">درحال دانلود لطفا صبر کنید...</string>
    <string name="menu_share">اشتراک گذاری</string>
    <string name="error">دانلود با خطا مواجه شد</string>
    <string name="cancel">دانلود کنسل شد</string>
    <string name="prg_loading">درحال دریافت بخشنامه ها</string>
    <string name="noItem">هیچ بخشنامه ای پیدا نشد \n(متاسفانه منطقه شما بخشنامه ها را بصورت آنلاین قرار نمی دهد)</string>
    <string name="noItemlocal">بخشنامه ای پیدا نشد\nاز این منطقه بخشنامه ای دانلود نکرده اید</string>
    <string name="programmer">سید مهدی حسینی قیداری</string>
    <string name="developer">برنامه نویس و توسعه دهنده</string>
    <string name="select_location">انتخاب منطقه</string>
    <string name="select_theme">انتخاب پوسته</string>
    <string name="dark_them">تم تاریک</string>
    <string name="history">تاریخچه نسخه ها</string>
    <string name="history_details">مشاهده جزئیات تغییرات</string>
    <string name="version">نسخه %1$s </string>
    <string name="build">شماره ساخت %1$s </string>
    <string name="support">حمایت از برنامه</string>
    <string name="support_details">ثبت امتیاز به برنامه در مارکت کافه بازار</string>
    <string name="contactus">ارتباط با توسعه دهنده</string>
    <string name="sendPM">ارسال پیام به تلگرام</string>
    <string name="sendPM_developer">ارسال پیام به تلگرام توسعه دهنده</string>
    <string name="askQ">ارسال پیام به ایمیل</string>
    <string name="askQ_details">ارسال پیام به ایمیل توسعه دهنده</string>
    <string name="downloadCompleted">دانلود کامل شد</string>
    <string name="preview">مشاهده</string>
    <string name="sheet_Details">آیا مایل به دانلود این بخشنامه هستید؟</string>
    <string name="cancelTask">انصراف</string>
    <string name="download">دانلود</string>
    <string name="RETRY">دوباره تلاش کنید</string>
    <string name="close">خسته نباشی</string>
    <string name="NotExist">کافه بازار در گوشی شما پیدا نشد</string>
    <string name="about_detail">مشخصات برنامه</string>
    <string name="drawer_message">خوش آمدید به بخشنامه</string>
    <string name="whoops">Whoops!</string>
    <string name="wait">لطفا صبر کنید</string>
    <string name="noVPN">خطا در دریافت</string>
    <string name="NoInternet">دریافت اطلاعات با خطا مواجه شد. اگر از فیلترشکن استفاده می کنید باید آن را خاموش کنید، در غیر این صورت اینترنت شما قطع یا ضعیف است.</string>

    <string name="titleEMG">اطلاعیه مهم</string>
    <string name="positiveEMG">مطالعه کردم</string>
    <string name="tabState">بخشنامه های مناطق</string>
    <string name="tabMinistry">بخشنامه های وزارت</string>
    <string name="tabMultiServer">بخشنامه های چندسروری</string>

    <string name="sliderNext">بعدی</string>
    <string name="sliderSkip">رد کن</string>
    <string name="theme">پوسته</string>
    <string name="select_MultiServer">استفاده از چند سرور همزمان</string>
    <array name="skinQ">
        <item>روشن</item>
        <item>تاریک</item>
        <item>هماهنگ با پیشفرض سیستم</item>
    </array>
    <array name="skin">
        <item>روشن</item>
        <item>تاریک</item>
    </array>
</resources>
