<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/img_no_internet_satellite" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whoops"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="?attr/PrimaryTextColor"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_gravity="center"
        android:text="@string/NoInternet"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="?attr/PrimaryTextColor" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_retry"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:background="@drawable/btn_rounded_primary"
        android:text="@string/RETRY"
        android:layout_gravity="center"
        android:textColor="#fff" />
</LinearLayout>