<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/BackgroundColor"
    android:paddingTop="@dimen/spacing_medium">

    <LinearLayout
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/spacing_middle"
        android:paddingTop="@dimen/spacing_middle"
        android:paddingRight="@dimen/spacing_middle"
        android:paddingBottom="@dimen/spacing_medium">

        <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/appicon"
            android:layout_width="60dp"
            android:layout_height="60dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="?attr/PrimaryTextColor" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/programmer"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="?attr/PrimaryTextColor" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#424242" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/spacing_middle">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_middle"
            android:text="@string/about_detail"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="?attr/PrimaryTextColor" />

        <RelativeLayout
            android:id="@+id/lv_changelog"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="@dimen/spacing_middle">
            <LinearLayout
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/history"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:textColor="?attr/PrimaryTextColor" />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="@string/history_details"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/SecondaryTextColor" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="?attr/PrimaryTextColor" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_Build"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="?attr/PrimaryTextColor" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#424242" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:paddingTop="@dimen/spacing_middle">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_middle"
            android:text="@string/contactus"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="?attr/PrimaryTextColor" />

        <LinearLayout
            android:id="@+id/lv_telegram"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sendPM"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="?attr/PrimaryTextColor" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/sendPM_developer"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="?attr/PrimaryTextColor" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#424242" />

        <LinearLayout
            android:id="@+id/lv_email"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/askQ"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="?attr/PrimaryTextColor" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/askQ_details"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="?attr/PrimaryTextColor" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#424242" />
    <LinearLayout
        android:id="@+id/lv_star"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/support"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="?attr/PrimaryTextColor" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:text="@string/support_details"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="?attr/PrimaryTextColor" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#424242" />
</LinearLayout>